# lidar_c

./: .gitignore  README.md  requirements-gds-render.txt  requirements-python-lidar-original.txt
code/tools/pr_lidar_native/: CMakeLists.txt  README.md
code/tools/pr_lidar_native/scripts/: compare_gds_geometry.py  compare_lidar_net_metrics.py  gdsfactory_adapters.py  lidar_yml_to_picdb_yml.py  run_lidar_benchmark_regression.py  run_python_lidar_original.py
docs/: ALGORITHM_CHANGES_AND_INNOVATIONS.md  ARTIFACT_EVALUATION_REPORT.md  CURRENT_RESULTS.md  ENVIRONMENT.md  EXPERIENCE_AND_TROUBLESHOOTING.md  FILE_MANIFEST.md  GPT55_AGENT_SPEC.md  LAE_LIDAR_AGENT_PROTOCOL.md  METHODOLOGY.md  PAPER_BLUEPRINT.md  PERFORMANCE_AND_QUALITY_EVIDENCE.md  RESEARCH_ARTIFACT.md  SCIENTIFIC_RESULT.md  TRANSFER_GUIDE.md
results/: README.md
results/reference_gds_compare/: gds_inventory.csv  gds_pair_summary.csv  gds_pair_summary.json  gds_xor_hotspots.csv
results/reference_run/: clements_16x16_cpp.gds  clements_8x8_cpp.gds  mrr_weight_bank_16x16_cpp.gds  mrr_weight_bank_4x4_cpp.gds  mrr_weight_bank_8x8_cpp.gds  multiportmmi_16x16_cpp.gds  multiportmmi_32x32_cpp.gds  multiportmmi_8x8_cpp.gds  reference_run.csv  reference_run.json  toy_example_gp_cpp.gds
results/research_evidence/: README.md  artifact_scorecard.csv  artifact_scorecard.json  h010_public_validation_evidence_ledger.csv  h010_public_validation_evidence_ledger.json  research_claims_ledger.csv  (+32 more)
standard_gds/: README.md
tools/: generate_paper_assets.py  merge_into_picdb.ps1  run_all_cases.ps1  validate_research_artifact.py
(+54 files in other folders)
